<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_feelings" tools:context=".Feelings"
    android:background="#B3E5FC">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_header"
        android:id="@+id/mainHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:contextClickable="false"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_text"
            android:layout_weight="1"
            android:layout_marginTop="20px"
            android:hint="Name"
            android:textColor="#FFF59D" />

        <Button
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:text="@string/name_btn"
            android:id="@+id/go_btn"
            android:layout_marginTop="20px"
            android:clickable="true"
            android:onClick="findMood"
            android:background="#4FC3F7"
            android:textColor="#FFF59D"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:weightSum="1"
        android:layout_marginTop="20px"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yoga_title"
            android:id="@+id/textView"
            android:layout_weight="0.71"
            android:textColor="#000000" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:id="@+id/yoga_type">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga_btn1"
                android:id="@+id/yoga_btn1"
                android:layout_weight="0.12" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga_btn2"
                android:id="@+id/yoga_btn2"
                android:layout_weight="0.12" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga_btn3"
                android:id="@+id/yoga_btn3"
                android:layout_weight="0.12" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30sp"
        android:weightSum="1"
        android:id="@+id/linearLayout3">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox1"
            android:id="@+id/checkBox2"
            android:layout_weight="0.50" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox2"
            android:id="@+id/checkBox1"
            android:layout_weight="0.25" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20px"
        android:id="@+id/linearLayout4">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox3"
            android:id="@+id/checkBox3"
            android:layout_weight="0.48" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox4"
            android:id="@+id/checkBox4"
            android:layout_weight="0.25" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20px"
        android:id="@+id/linearLayout5">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:id="@+id/spinner"
            android:background="#4FC3F7"
            android:textColor="#ffffff"
            android:layout_marginTop="20sp"
            android:focusable="false"
            android:entries="@array/spinner_options"
            android:focusableInTouchMode="true"
            android:touchscreenBlocksFocus="true"
            android:spinnerMode="dialog"
            android:transitionGroup="true"
            android:scrollIndicators="right"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout7">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:layout_marginRight="60sp"
            android:textOff="@string/switch_off"
            android:textOn="@string/switch_on"
            android:layout_weight="0.41"
            android:textAlignment="center"
            android:backgroundTintMode="screen"
            android:checked="true" />

        <ToggleButton
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:id="@+id/chi_toggle"
            android:textOff="@string/toggle_off"
            android:textOn="@string/toggle_on"
            android:layout_weight="0.32"
            android:background="#4FC3F7"
            android:checked="false"
            android:textColor="#FFF59D" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30sp"
        android:id="@+id/linearLayout6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/switch_label"
            android:id="@+id/switch_label"
            android:layout_weight="0.79"
            android:textColor="#000000" />

        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/toggle_label"
            android:id="@+id/toggle_label"
            android:layout_weight="0.13"
            android:textColor="#000000" />
    </LinearLayout>

    <ImageView
        android:layout_width="95sp"
        android:layout_height="95sp"
        android:id="@+id/output_image"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/output_text"
        android:layout_alignTop="@+id/output_image"
        android:layout_alignRight="@+id/linearLayout7"
        android:layout_alignEnd="@+id/linearLayout7"
        android:layout_alignBottom="@+id/output_image"
        android:layout_toRightOf="@+id/output_image"
        android:layout_toEndOf="@+id/output_image"
        android:layout_marginLeft="20sp"
        android:text="@string/output"
        android:textColor="#000000" />

</RelativeLayout>
